--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <title>Viagem Firinfimfim!</title>
 </head>
 <body>
-    <div>
-        <div class="contador">
-            <script>(function(d, s, id) { var    js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><a data-type="countdown" data-id="3559374" class="tickcounter" style="display: block; width: 100%; position: relative; padding-bottom: 25%" title="Countdown" href="//www.tickcounter.com/"></a>
+    <div class="container">
+        <h1 id="headline">Contador Firinfimfim</h1>
+        <div id="countdown">
+          <ul>
+            <li><span id="days"></span>Dias</li>
+            <li><span id="hours"></span>Horas</li>
+            <li><span id="minutes"></span>Minutos</li>
+            <li><span id="seconds"></span>Segundos</li>
+          </ul>
         </div>
-        <img src="./firin.jpg" class="imagem">
-    </div>
+        <div id="content" class="emoji">
+          <span>🥳</span>
+          <span>🎉</span>
+        </div>
+        <img src="./firin.jpg">
+      </div>
+      <script src="./index.js"></script>
 </body>
 </html>
