--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Viagem Firinfimfim!</title>
+    <title>Viagem Firinfinfim!</title>
 </head>
 <body>
     <div class="container">
